# offlickr

./: .editorconfig  .env.example  .gitignore  .markdownlint.jsonc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  llms.txt  pyproject.toml
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
docs/: cli-reference.md  data-model.md  external-fetching.md  getting-started.md  themes.md
docs/release-notes/: TEMPLATE.md  v0.1.0.md
src/offlickr/: __init__.py  __main__.py  cli.py  issues.py  model.py
src/offlickr/derive/: __init__.py  exif.py  images.py  pipeline.py  search.py  video.py
src/offlickr/fetch/: avatars.py  client.py  runner.py  thumbnails.py
src/offlickr/ingest/: account.py  albums.py  apps_comments.py  comments.py  contacts.py  faves.py  flickrmail.py  followers.py  galleries.py  gallery_comments.py  group_discussions.py  groups.py  media.py  photos.py  pipeline.py  set_comments.py  testimonials.py  zip_cache.py
src/offlickr/render/: filters.py  pages.py  pagination.py  sanitize.py  slug.py
src/offlickr/themes/: __init__.py
tests/: conftest.py  test_cli.py  test_conftest_helpers.py  test_ingest_pipeline.py  test_issues.py  test_model.py  test_sanitize.py
tests/fixtures/mini-export/: account_profile.json  account_testimonials.json  albums.json  apps_comments_part001.json  contacts_part001.json  faves_part001.json  followers_part001.json  galleries.json  galleries_comments_part001.json  group_discussions.json  groups.json  photo_10000001.json  photo_10000002.json  photo_10000003.json  photo_10000004.json  photo_10000005.json  photo_10000006.json  photo_10000007.json  photo_10000008.json  photo_10000009.json  photo_10000010.json  photo_10000011.json  photo_10000012.json  photo_10000013.json  photo_10000014.json  photo_10000015.json  photo_10000016.json  photo_10000017.json  photo_10000018.json  photo_10000019.json  photo_10000020.json  photo_10000021.json  (+33 more)
tests/test_derive/: conftest.py  test_exif.py  test_images.py  test_pipeline.py  test_search.py  test_video.py
tests/test_fetch/: test_avatars.py  test_client.py  test_runner.py  test_thumbnails.py
tests/test_ingest/: test_account.py  test_collections.py  test_media.py  test_people_and_faves.py  test_photos.py  test_private.py  test_sanitize_at_ingest.py  test_testimonials.py  test_zip_cache.py
tests/test_render/: conftest.py  test_collections.py  test_filters.py  test_link_integrity.py  test_macros.py  test_pages.py  test_pagination.py  test_private_views.py  test_slug.py  test_social.py
(+35 files in other folders)
